--- a/contracts/package.json
+++ b/contracts/package.json
@@ -2,10 +2,11 @@
   "name": "contracts",
   "version": "0.1.0",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "dotenv": "^16.1.4",
-    "hardhat": "^2.15.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "hardhat": "^2.14.0"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.8.3",
+    "dotenv": "^16.0.3"
   }
 }
