--- a/app/package.json
+++ b/app/package.json
@@ -16,8 +16,6 @@
     "@mui/lab": "^5.0.0-alpha.132",
     "@mui/material": "^5.13.3",
     "@rainbow-me/rainbowkit": "^1.0.1",
-    "@spheron/browser-upload": "^1.0.3",
-    "@spheron/storage": "^1.0.16",
     "@svgr/webpack": "^8.0.1",
     "@types/lodash": "^4.14.195",
     "@types/node": "20.2.5",
@@ -40,6 +38,7 @@
     "typescript": "5.0.4",
     "viem": "^0.3.43",
     "wagmi": "^1.0.9",
+    "web3.storage": "^4.5.4",
     "yup": "^1.2.0"
   }
 }
