--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.132",
     "@mui/material": "^5.13.3",
+    "@pushprotocol/restapi": "^1.3.8",
     "@rainbow-me/rainbowkit": "^1.0.1",
     "@svgr/webpack": "^8.0.1",
     "@types/lodash": "^4.14.195",
