Integrate huddle01 for streams on chat page

--- a/app/.env
+++ b/app/.env
@@ -1,5 +1,7 @@
 NEXT_PUBLIC_WEB3_STORAGE_KEY=
 NEXT_PUBLIC_OPEN_AI_API_KEY_SECRET=
+NEXT_PUBLIC_HUDDLE01_API_KEY=
+NEXT_PUBLIC_HUDDLE01_PROJECT_ID=
 
 NEXT_PUBLIC_TABLELAND_TABLE=interview_messages_314159_105
 
