--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@adraffy/ens-normalize": "^1.9.2",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@huddle01/react": "^0.0.11",
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.132",
     "@mui/material": "^5.13.3",
