--- a/app/.env
+++ b/app/.env
@@ -5,3 +5,6 @@ NEXT_PUBLIC_HUDDLE01_PROJECT_ID=
 
 NEXT_PUBLIC_AURORA_TESTNET_PROFILE_CONTRACT_ADDRESS=0x96E6AF6E9e400d0Cd6a4045F122df22BCaAAca59
 NEXT_PUBLIC_AURORA_TESTNET_INTERVIEW_CONTRACT_ADDRESS=0x1e4712A93beEc0aa26151CF44061eE91DD56f921
+
+NEXT_PUBLIC_AURORA_MAINNET_PROFILE_CONTRACT_ADDRESS=0x96E6AF6E9e400d0Cd6a4045F122df22BCaAAca59
+NEXT_PUBLIC_AURORA_MAINNET_INTERVIEW_CONTRACT_ADDRESS=0x02008a8DBc938bd7930bf370617065B6B0c1221a
